add-exports fix for tests